tests/ui/suggestions/type-ascription-instead-of-let.stderr
error: expected identifier, found `:`
  --> $DIR/type-ascription-instead-of-let.rs:5:13
   |
LL |         temp: i32 = fun(5i32);
   |             ^ expected identifier

error: aborting due to previous error

